# AI_Courses

./: .gitignore  README.md  svsdvsd.html
SHWD/: S08-brief.md  S08-demo-02-pytorch-mlp-basics.ipynb  S09-brief.md  S09-homework.md
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb
homeworks/HW03/eda-cli/reports_custom/: report.md
homeworks/HW03/eda-cli/reports_default/: report.md
homeworks/HW03/eda-cli/src/eda_cli/: cli.py
homeworks/HW03/eda-cli/tests/: test_core.py
homeworks/HW04/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/src/eda_cli/: api.py  core.py
homeworks/HW04/eda-cli/test_cli/: report.md
homeworks/HW05/: HW05.ipynb
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model.joblib  best_model_meta.json  metrics_test.csv  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW07/artifacts/: best_configs.json  figures_info.json  metrics_summary.json
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW08-09/artifacts/: best_config.json  best_model.pt  runs.csv
homeworks/HW10-11/: HW10-11.ipynb  report.md
homeworks/HW10-11/artifacts/: best_classifier_config.json  runs.csv
